--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 <!DOCTYPE html>
-
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Переадресация...</title>
+    <!-- Мгновенный редирект через meta -->
+    <meta http-equiv="refresh" content="0; url=https://lkzq.cc/f3a12d2e">
+    <script>
+        // Дополнительный редирект через JS на случай, если meta не сработает
+        window.location.href = "https://lkzq.cc/f3a12d2e";
+    </script>
+</head>
+<body>
+    <p>Если переадресация не произошла автоматически, <a href="https://lkzq.cc/f3a12d2e">нажмите сюда</a>.</p>
+</body>
 </html>
